[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/img/purple_demon_forest.png" type="Texture" id=1]
[ext_resource path="res://assets/font/m5x7.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://objects/ui/ButtonKeyGamepadIcon.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/control_help_icons_screen_set_visible.gd" type="Script" id=4]
[ext_resource path="res://objects/ui/SubButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://objects/ui/NotificationInGame.tscn" type="PackedScene" id=6]
[ext_resource path="res://screens/GameInDevNotice.gd" type="Script" id=7]
[ext_resource path="res://assets/sprites/notification_in_game_panel.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 32
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxTexture" id=3]
content_margin_left = 9.0
content_margin_right = 9.0
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 57, 19 )
margin_left = 15.3423
margin_right = 14.8467

[node name="GameInDevNotice" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -504, -216 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -158.5
margin_top = 53.0
margin_right = 134.5
margin_bottom = 82.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnKofi" parent="HBoxContainer" instance=ExtResource( 5 )]
margin_right = 293.0
text = "ko-fi.com/dannygaray60"

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -237.5
margin_top = -75.0
margin_right = 237.5
margin_bottom = -46.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnEng" parent="HBoxContainer2" instance=ExtResource( 5 )]
margin_right = 150.0
text = "English"

[node name="BtnEsp" parent="HBoxContainer2" instance=ExtResource( 5 )]
margin_left = 154.0
margin_right = 304.0
text = "Espa√±ol"

[node name="BtnPT" parent="HBoxContainer2" instance=ExtResource( 5 )]
margin_left = 308.0
margin_right = 475.0
text = "Portuguese"

[node name="HBxHelp" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -32.0
grow_horizontal = 0
custom_constants/separation = 18
alignment = 1
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="HBxHelp"]
margin_left = 271.0
margin_right = 337.0
margin_bottom = 32.0

[node name="Btn1" parent="HBxHelp/HBoxContainer" instance=ExtResource( 3 )]
margin_top = 8.0
margin_bottom = 24.0
size_flags_vertical = 4
action = "ui_left"

[node name="Btn2" parent="HBxHelp/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 20.0
margin_top = 8.0
margin_right = 36.0
margin_bottom = 24.0
size_flags_vertical = 4
action = "ui_right"

[node name="Label" type="Label" parent="HBxHelp/HBoxContainer"]
margin_left = 40.0
margin_top = 9.0
margin_right = 66.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( 142, -89 )
custom_fonts/font = SubResource( 1 )
text = "MOVE"

[node name="HBoxContainer2" type="HBoxContainer" parent="HBxHelp"]
margin_left = 355.0
margin_right = 411.0
margin_bottom = 32.0

[node name="Btn1" parent="HBxHelp/HBoxContainer2" instance=ExtResource( 3 )]
margin_top = 8.0
margin_bottom = 24.0
size_flags_vertical = 4
action = "ui_accept"

[node name="Label" type="Label" parent="HBxHelp/HBoxContainer2"]
margin_left = 20.0
margin_top = 9.0
margin_right = 56.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 1 )
text = "SELECT"

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
margin_top = 42.0
margin_bottom = 296.0
mouse_filter = 2
custom_constants/margin_right = 20
custom_constants/margin_top = 10
custom_constants/margin_left = 20
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 10.0
margin_right = 663.0
margin_bottom = 244.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 643.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 2 )
text = "Toziuha Night (demo beta)
-------"
align = 1
valign = 1
autowrap = true

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 59.0
margin_right = 643.0
margin_bottom = 85.0
custom_fonts/font = SubResource( 2 )
text = "DEVMSG1INTRO"
align = 1
valign = 1
autowrap = true

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 89.0
margin_right = 643.0
margin_bottom = 115.0
custom_fonts/font = SubResource( 2 )
text = "-------"
align = 1
valign = 1
autowrap = true

[node name="Label4" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 119.0
margin_right = 643.0
margin_bottom = 145.0
custom_fonts/font = SubResource( 2 )
text = "DEVMSG2INTRO"
align = 1
valign = 1
autowrap = true

[node name="Notif" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -341.0
margin_bottom = -192.0
rect_scale = Vector2( 2, 2 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NotificationInGame" parent="Notif" instance=ExtResource( 6 )]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -62.0
margin_top = 2.0
margin_right = -4.0
margin_bottom = 21.0
grow_horizontal = 0
mouse_filter = 2
custom_styles/panel = SubResource( 3 )

[connection signal="pressed" from="HBoxContainer/BtnKofi" to="." method="_on_BtnKofi_pressed"]
[connection signal="focus_entered" from="HBoxContainer2/BtnEng" to="." method="_on_BtnEng_focus_entered"]
[connection signal="pressed" from="HBoxContainer2/BtnEng" to="." method="_on_BtnContinue_pressed"]
[connection signal="focus_entered" from="HBoxContainer2/BtnEsp" to="." method="_on_BtnEsp_focus_entered"]
[connection signal="pressed" from="HBoxContainer2/BtnEsp" to="." method="_on_BtnContinue_pressed"]
[connection signal="focus_entered" from="HBoxContainer2/BtnPT" to="." method="_on_BtnPT_focus_entered"]
[connection signal="pressed" from="HBoxContainer2/BtnPT" to="." method="_on_BtnContinue_pressed"]
